Opened 16 years ago
Closed 16 years ago
#3493 closed bug (fixed)
Wrong BView scripting properties resolution
Reported by: | matjako | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
BView and BControl expose pairs of scriptable properties with the same name. For instance, there is one 'Frame' property that responds to B_GET_PROPERTY command and one 'Frame' property that responds to B_SET_PROPERTY command.
This is incorrect because it makes specifiers non-unique and does not follow the BeBook specification. It may break applications that rely on specifiers being unique and containing a _list_ of commands.
EXPECTED BEHAVIOR
The correct way is to have one property that includes a list of all supported commands. Likewise, the description should be changed to explain that a property can be _both_ read and set. Like so: { "Frame", { B_GET_PROPERTY, B_SET_PROPERTY, 0 }, { B_DIRECT_SPECIFIER, 0 }, "Gets or sets the view's frame rectangle.",0 }, STEPS TO REPRODUCE
Issue a B_GET_SUITES scripting command to a BView instance, observe the duplicates in the reply.
Fixed in hrev30920