* merged Frame and Hidden properties (set and get) (bug #3493). * changed Hidden set property to not check the current hidden state, as it's not exactly related.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30920 a95241bf-73f2-0310-859d-f6bbb57e9c96